# transcript-intelligence-brillio

./: .env.example  .gitignore  BONUS_INSIGHTS.md  README.md  pyproject.toml  test_ingestion.py
backend/: database.py  main.py  models.py  pipeline.py  retrieval.py
backend/agents/: ingestion.py  risk.py  sentiment.py  synthesis.py  topic.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/risk/: page.tsx
frontend/app/sentiment/: page.tsx
frontend/app/transcripts/: page.tsx
frontend/app/transcripts/[id]/: page.tsx
frontend/components/: Sidebar.tsx
frontend/lib/: api.ts
